--- a/aws-bedrock-version/package.json
+++ b/aws-bedrock-version/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
+  "imports": {
+    "#modules/*": "./modules/*",
+    "#lib/*": "./lib/*",
+    "#config": "./config.js"
+  },  "scripts": {
     "start": "node index.js",
     "load-products": "node scripts/load-products.js",
     "debug-config": "node scripts/debug-config.js"
